Change host_name to app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">APP</string>
-    <string name="host_name">raspberrypi</string>
+    <string name="host_name">app</string>
 </resources>
